<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <ImageView
        android:id="@+id/movie_img"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:scaleType="centerCrop"
        android:src="@drawable/capa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/movie_logo"
        android:layout_width="180dp"
        android:layout_height="92dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_top"
        app:layout_constraintVertical_bias="0.642"
        app:srcCompat="@drawable/logomovie" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/espacamento_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10218978" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/espacamento_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9026764" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/serie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"

        android:text="@string/serie"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline_top"
        app:layout_constraintStart_toEndOf="@+id/netflix_logo" />

    <TextView
        android:id="@+id/filmes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filmes"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline_top"
        app:layout_constraintEnd_toStartOf="@+id/minha_lista_top"
        app:layout_constraintStart_toEndOf="@+id/serie" />

    <TextView
        android:id="@+id/minha_lista_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minha_lista_top"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline_top"
        app:layout_constraintEnd_toStartOf="@+id/espacamento_r" />

    <ImageView
        android:id="@+id/netflix_logo"
        android:layout_width="76dp"
        android:layout_height="112dp"
        android:layout_marginStart="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/horror"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/horror"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/espacamento_l"
        app:layout_constraintTop_toTopOf="@+id/guideline_bottom" />

    <TextView
        android:id="@+id/misterio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/misterio"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/suspense"
        app:layout_constraintStart_toEndOf="@+id/horror"
        app:layout_constraintTop_toTopOf="@+id/guideline_bottom" />

    <TextView
        android:id="@+id/suspense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="224dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/suspense"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/espacamento_r"
        app:layout_constraintStart_toStartOf="@+id/espacamento_l"
        app:layout_constraintTop_toTopOf="@+id/guideline_bottom" />

    <Button
        android:id="@+id/minha_lista"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="88dp"
        android:layout_height="57dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"

        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/minha_lista"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:icon="@drawable/add_24"
        app:iconGravity="top"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/movie_img"
        app:layout_constraintLeft_toRightOf="@id/espacamento_l"
        app:layout_constraintRight_toLeftOf="@id/assistir"
        app:layout_constraintTop_toTopOf="@+id/guideline_bottom"
        app:layout_constraintVertical_bias="0.865" />

    <Button
        android:id="@+id/detalhes"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="90dp"
        android:layout_height="63dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/detalhes"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:icon="@drawable/info_24"
        app:iconGravity="top"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/movie_img"
        app:layout_constraintLeft_toRightOf="@id/assistir"
        app:layout_constraintRight_toLeftOf="@id/espacamento_r"
        app:layout_constraintTop_toTopOf="@+id/guideline_bottom"
        app:layout_constraintVertical_bias="0.864" />

    <Button
        android:id="@+id/assistir"
        android:layout_width="131dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/red"
        android:text="@string/assistir"
        android:textColor="@color/white"
        android:textSize="13sp"

        app:icon="@drawable/play_24"
        app:iconTint="@color/white"
        app:iconSize="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/movie_img"
        app:layout_constraintEnd_toStartOf="@+id/detalhes"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/minha_lista"
        app:layout_constraintTop_toTopOf="@+id/guideline_bottom"
        app:layout_constraintVertical_bias="0.820"
        app:iconPadding="0dp" />

    <TextView
        android:id="@+id/lancamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/lancamentos"
        android:textSize="12sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/espacamento_l"
        app:layout_constraintTop_toBottomOf="@+id/movie_img" />

    <ImageView
        android:id="@+id/f1"
        android:layout_width="81dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@+id/espacamento_l"
        app:layout_constraintTop_toBottomOf="@+id/lancamento"
        app:srcCompat="@drawable/f1" />

    <ImageView
        android:id="@+id/f2"
        android:layout_width="83dp"
        android:layout_height="46dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toStartOf="@+id/f3"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toEndOf="@+id/f1"
        app:layout_constraintTop_toBottomOf="@+id/movie_img"
        app:srcCompat="@drawable/f2" />

    <ImageView
        android:id="@+id/f3"
        android:layout_width="83dp"
        android:layout_height="46dp"
        android:layout_marginStart="256dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toStartOf="@+id/espacamento_r"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/espacamento_l"
        app:layout_constraintTop_toBottomOf="@+id/movie_img"
        app:srcCompat="@drawable/f3" />


</androidx.constraintlayout.widget.ConstraintLayout>